0.10.0
    o legend: fix when number of levels in aes var higher that represented levels
    o subjectProfile[Interval|Line|Event]Plot: alpha parameter
    o createSubjectProfileReport: suppress warnings Sweave
    o prepareSubjectProfile: remove message: 'scale already present'
0.9.2
    o createSubjectProfileReport: set knitr environment (to be used within rmd doc)
    o export convertAesVar
0.9.1
    o createSubjectProfileReport: margin set by patient if reportPerSubject
0.9.0
    o subjectProfileCombine: fix extraction time limits in case no plot
    o remove panel border for empty plot
    o timeExpand
0.8.0
    o subjectProfileTextPlot: fix in case paramValueVar is empty
    o subjectProfileIntervalPlot: use vertical segment if start and end dates are equal
0.7.0
    o timeAlign, timeAlignPerSubject: specification per or across modules
    o subjectProfileIntervalPlot: fix when timeTrans and same start/end values
0.6.0
    o subjectProfileTextPlot: table format
    o custom 'trans', getTimeTrans
0.5.0
    o createSubjectProfileReport: reportPerSubject and extend outputFile for different directory
0.4.0
    o createSubjectProfileReport/subjectProfileIntervalPlot: timeAlign
    o defineIndex: fix index specification
    o report: support unicode font (use cairo_pdf instead of pdf)
0.3.0
    o subjectProfileIntervalPlot: new parameters: timeStartShapeVar/timeEndShapeVar
    o fix issue tibble: convert input data as data.frame
0.2.0
    o save nLines at module plot creation instead of extracting them  when combining plots
    o when combining plots across modules, close graphic device only at the end
    o formatParamVar: fix warning when multiple 'paramGroupVar'
    o getGLPGShapePalettePatientProfile
    o getPageVar: fix for plot with multiple lines
    o fix to remove warning: 'Coordinate system already present.'
    o subjectProfileLinePlot: fix to remove warning: 'geom_path: Each group consists of only one observation'
    o additional messages for verbose